# victus-control

./: .gitignore  99-hp-wmi-permissions.rules  CHANGELOG.md  CODE_REVIEW_FIXES.md  PULL_REQUEST.md  PULL_REQUEST_DESCRIPTION.md  README.md  arch-install.sh  bootstrap.sh  fedora-install.sh  install.sh  llmcontext.txt  meson.build  payload.json  ubuntu-install.sh  victus-control-sudoers
backend/: meson.build  victus-backend.service  victus-control.rules  victus-healthcheck.sh
backend/src/: config.hpp  constants.hpp  fan.cpp  fan.hpp  keyboard.cpp  keyboard.hpp  logger.hpp  main.cpp  set-fan-mode.sh  set-fan-speed.sh  set-rgb-zone.sh  util.cpp  util.hpp  validation.cpp  validation.hpp
backend/tests/: validation_test.cpp
frontend/: meson.build
frontend/src/: about.cpp  fan.cpp  fan.hpp  keyboard.cpp  keyboard.hpp  main.cpp  main.hpp  socket.cpp  socket.hpp
gnome-extension/: README.md  extension.js  install.sh  metadata.json  stylesheet.css
